# vocabsieve

./: .gitignore  .pre-commit-config.yaml  .pylintrc  API.md  MANIFEST.in  README.md  appveyor.yml  config.py  dev-requirements.txt  flake.nix  main.py  mypy.ini  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  ssmtool.desktop  ssmtool.py  test-requirements.txt  tools.py  tox.ini  vocabsieve.desktop  vocabsieve.py  vocabsieve.spec
.github/ISSUE_TEMPLATE/: bug_report.md  for-anything-else--please-open-a-discussions-thread-instead-.md
.github/workflows/: build-binaries.yml  pages.yml
cx_freeze/: Info.plist  README.md  analyzer.py  app.py  app_win32.py  build_mac.sh  icon.icns  setup.py
cx_freeze/debug/: app_debug.py  setup.py
cx_freeze/mac/: app.py  setup.py
cx_freeze/prod/: setup.py
cx_freeze/win/: app.py  setup.py
cx_freeze/win_debug/: app_debug.py  setup.py
docs/: CNAME  _config.yml  background.md  configuration.md  index.md  installation.md  resources.md  setup.md  tracking.md  workflows.md
docs/chapters/: index.md
docs/configuration/: index.md  tracking.md
docs/importers/: Autotext.md  KOReader.md  Kindle.md  index.md
macapp/: sentencetool.py  setup.py
recipe/: entrypoint.sh  requirements.txt
scripts/: ssmtool
src/ssmtool/: __main__.py  config.py  tools.py
ssmtool/: __init__.py  api.py  config.py  db.py  dictionary.py  dictmanager.py  forvo.py  main.py  tools.py
ssmtool/ext/importer/: KindleImporter.py
ssmtool/ext/reader/: __init__.py  server.py
testdata/: dict.db
testdata/basic/: dict.db
testdata/stardict/quick_eng-rus-2.4.2/: quick_english-russian.dict  quick_english-russian.idx  quick_english-russian.idx.oft  quick_english-russian.ifo
tests/: test_has_module.py  test_local_dictionary.py  test_qt_basics.py
vocabsieve/: __init__.py  __main__.py  api.py  app_text.py  audio_player.py  cached_get.py  config.py  constants.py  db.py  dictformats.py  dictionary.py  dictmanager.py  fieldmatcher.py  format.py  forvo.py  global_events.py  global_names.py  known_words.py  lemmatizer.py  local_dictionary.py  main.py  models.py  playsound.py  record.py  settings.py  stats.py  text_manipulation.py  tools.py  uncaught_hook.py  vsnt.py  xdxftransform.py
vocabsieve/analyzer/: BookAnalyzer.py  __init__.py  utils.py
vocabsieve/config/: __init__.py  anki_tab.py  base_tab.py  config_dialog.py  dictmanager.py  fieldmatcher.py  general_tab.py  interface_tab.py  misc_tab.py  network_tab.py  processing_tab.py  source_tab.py  tracking_tab.py  word_rules_editor.py
vocabsieve/contentmanager/: __init__.py  contentmanager.py  dialog.py  utils.py
vocabsieve/dsl/: __init__.py  layer.py  main.py  tag.py
vocabsieve/ext/importer/: BatchNotePreviewer.py  __init__.py  (+7 more)
vocabsieve/importer/: AutoTextImporter.py  AutoTextVisualizer.py  BatchNotePreviewer.py  GenericImporter.py  KindleVocabImporter.py  KoreaderImporter.py  KoreaderVocabImporter.py  WordListImporter.py  __init__.py  models.py  utils.py
vocabsieve/reader/: server.py  utils.py
vocabsieve/sources/: ForvoAudioSource.py  GoogleTranslateSource.py  LocalAudioSource.py  LocalDictionarySource.py  LocalFreqSource.py  LocalSource.py  WiktionarySource.py  __init__.py  forvo_audio_source.py  google_translate_source.py  local_audio_source.py  local_dictionary_source.py  local_freq_source.py  wiktionary_source.py
vocabsieve/ui/: __init__.py  about.py  audio_selector.py  freq_display_widget.py  logview.py  main_window_base.py  multi_definition_widget.py  searchable_boldable_text_edit.py  searchable_text_edit.py  source_group_widget.py  source_ordering_widget.py  word_list_display.py  word_marking_dialog.py  word_record_display.py  word_rules_editor.py
(+17 files in other folders)
