[metadata]
name = vocabsieve
version = 0.8.2
author = FreeLanguageTools
author_email = pypi@5f37.8shield.net
description = A simple, effective sentence mining tool.
long_description = file: README.md
long_description_content_type = text/markdown
url =https://github.com/FreeLanguageTools/vocabsieve
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: X11 Applications :: Qt

[options]
package_dir =
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    lxml
    PyQt5
    requests
    beautifulsoup4
    simplemma
    pystardict
    bidict
    flask
    flask-sqlalchemy
    charset-normalizer
    slpp
    mobi
    sentence_splitter
    pymorphy2
    pymorphy2-dicts-ru
    ebooklib
    pycountry
    markdownify
    markdown
    python-lzo
    readmdict
    packaging


[options.entry_points]
console_scripts =
    vocabsieve = vocabsieve.main:main


[options.data_files]
share/applications = 
    vocabsieve.desktop
share/icons =
    vocabsieve.png
