[metadata]
name = vocabsieve
version = 0.12.4
author = FreeLanguageTools
author_email = pypi@5f37.8shield.net
description = A simple, effective sentence mining tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FreeLanguageTools/vocabsieve
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: X11 Applications :: Qt

[options]
package_dir =
packages = find:
include_package_data = true
python_requires = >=3.11
install_requires =
    lxml
    PyQt5
    requests
    beautifulsoup4
    simplemma
    pystardict
    bidict
    flask
    charset-normalizer
    slpp
    mobi
    sentence_splitter
    pymorphy3
    pyqtgraph
    pymorphy3-dicts-ru
    pymorphy3-dicts-uk
    ebooklib
    pyqtdarktheme-fork
    pysubs2
    markdownify
    markdown
    python-lzo
    readmdict
    loguru
    packaging
    typing_extensions
    waitress
    pynput


[options.entry_points]
console_scripts =
    vocabsieve = vocabsieve.main:main


[options.data_files]
share/applications = 
    vocabsieve.desktop
share/icons =
    vocabsieve.png
